--- a/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "The Good Cycle of \"Data Public Welfare\""
-  excerpt: "Shaping the \"Community Park\" of the digital world and making society better."
+  title: "A Virtuous Circle of Data Altruism"
+  excerpt: "Entering an \"inclusive playground\" that brings about real change."
   image: "/assets/imgs/92214070_1528843037282109_3836225141944090624_n.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+The soulbound tokens (SBTs) concept steamed out of the web3 station to great effect in my previous column. Many are excited by the prospect of multilateral engagement among individuals and communities. Naturally, an important question surfaced: Is a completely decentralized society with connections through specific mechanisms necessary to achieve co-creation and collaboration?
 
- The SBT (Soul Binding Credentials) discussed earlier outlines the vision of multiple collaborations between individuals and communities in the Web3 world. Some people therefore ask, is it possible to achieve co-creation and collaboration only in a completely decentralized society and connected through specific mechanisms? 
+In fact, collaboration is not limited to a single mechanism. The key lies in openness. Taiwan has opened up many co-creation applications for people-public-private partnerships via open data. Take [Civil IoT Taiwan](https://ci.taiwan.gov.tw/en), for example — it opens sensory data, including air quality, water resources and disaster management built by local agencies using the OGC SensorThings API.
 
-In fact, collaboration is not limited to a single mechanism, the key lies in “openness”. In recent years, Taiwan has already opened up many co-creation applications with the cooperation of the whole people through open data. Taking the [People's Livelihood Public Internet of Things](https://ci.taiwan.gov.tw/) as an example, it is to use the OGC SensorThings API to uniformly use the sensing data of water resources, air, and disasters built by each local unit in the past. fully open later. 
+This has produced a steady stream of social creative problem-solving ideas. For example, a smart irrigation system incorporating rainfall warnings and a smart system addressing the needs of clam fisheries are sterling ideas raised by participants in Taiwan's data application competitions on the basis of the Civil IoT Taiwan. 
 
- Since then, many social creative problem-solving ideas have appeared in an endless stream. For example, the smart irrigation idea combined with the rainfall warning, and the clam smart system to help the needs of fish, farmers and aquaculture are all in recent years in Taiwan's data application competition. Great idea based on networking. 
+Case in point are various open data experiments proposed by the government and people. Academia Sinica, the Republic of Citizens' leading research institution, is teaming up with private groups to develop an air box used for monitoring pollution levels. By opening to public participation, air boxes were adopted and distributed across Taiwan. The data is published on the airmap.g0v.tw website, so everyone has another channel to understand air quality in Taiwan without relying solely on the Environmental Protection Administration's measuring stations.
 
- On the basis of open data, both the government and citizens have successively proposed different experiments. For example, the Chinese Academy of Sciences has cooperated with private teams to develop an "air box" that can be used to monitor air quality. By opening up the public to participate in the adoption of airboxes, after airboxes are spread all over Taiwan, the data will be published on the Zero Time Air Pollution Observation Network, so that everyone has another channel to understand the actual air quality in Taiwan without relying entirely on the EPA's measuring stations. 
+Another highlight is the "Taiwan Can Help, Health for All" program launched by the government during the pandemic. Utilizing the National Health Insurance Administration's app, anyone can choose to turn the number of masks they can purchase but did not purchase into humanitarian aid. Namely, they can donate masks to those in need around the world. The people can choose to become donors instead of waiting for the data to be released before starting to ponder how best to utilize.
 
- Another classic example is that during the epidemic, the Taiwan government launched "Protect Taiwan and Help the World". Through the Kuaitong App, the national health insurance action, anyone can choose the number of masks they "can buy but have not purchased." "As humanitarian aid -- that is, donating one's own masks to those in need in other parts of the world. In other words, the public can actively choose to become "donors" instead of waiting for the data to be released before starting to think about the application method. 
+This approach of active altruism and co-creation for mutual benefit is the origin of the data altruism model the government is proposing this year. The concept is that the data of an individual or an organization can be used by others with the consent under the condition it is only of a statistical nature, completely anonymous and will not endanger the individual or organization.
 
- This approach of "active altruism and co-creation for mutual benefit" has become the origin of the "Data Altruism" we proposed this year. The basic concept of "Data Public Welfare" is that individuals voluntarily provide data, and after processing, it becomes data that has nothing to do with personal data, and is allowed to be used for public welfare free of charge. In addition, units willing to provide data for free can also join the ranks of "data public welfare". 
+This is also the essence of the Data Governance Act officially implemented by the European Commission in June. Data altruism emphasizes the beneficial purpose of data for scientific research and improving the public service. Individuals and data holders provide data voluntarily and free of charge for nonprofit social development. The facilitation of data-sharing benefiting the social environment takes place in an easy and simple way.
 
- This is the core connotation of the Data Governance Act (DGA), which was officially implemented by the European Commission in June this year. The EU emphasizes the good purpose of data in the overall environment. Individuals and data holders voluntarily provide data for scientific research, improve public services, and make data sharable in a simple way to benefit the social environment. 
+Compared with the open data we tend to be more familiar with, the common characteristics of data public welfare or data altruism emphasize the freedom and openness of the initiative and participants. Personal data is no longer just a sensitive term for privacy and security, but includes the value of altruistic contributions. And of course, a digital mutual trust relationship is established accordingly.
 
- Compared with the open data we are familiar with in the past, "data public welfare" emphasizes the public welfare of data and the initiative of data holders. Therefore, personal data is no longer just a sensitive term for privacy and security, but also includes the value of altruistic contributions, and thus establishes a digital mutual trust relationship. 
-
- I think that everyone might as well think of "data public welfare" as an admission ticket. Everyone can voluntarily and actively provide data to shape a "community park" in the digital world and make society better. When everyone can be a producer and user of data, new co-creation and collaboration relationships can be formed in the process of data collation and analysis, and then truly connect with each other and develop a new type of digital society. 
+In my mind's eye, data altruism is best seen as an admission ticket. All and sundry can voluntarily and actively provide relevant data as a process of entering an "inclusive playground" that brings about real change. When everyone is a producer and a user of data, new co-creation and collaboration relationships are formed in the arrangement and analysis of nonpersonal data. In such a way, true mutual connections are made and a new type of society with digital mutual benefit is developed.
