--- a/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -15,14 +15,14 @@ In fact, collaboration is not limited to a single mechanism. The key lies in ope
 
 This has produced a steady stream of social creative problem-solving ideas. For example, a smart irrigation system incorporating rainfall warnings and a smart system addressing the needs of clam fisheries are sterling ideas raised by participants in Taiwan's data application competitions on the basis of the Civil IoT Taiwan. 
 
-Case in point are various open data experiments proposed by the government and people. Academia Sinica, the Republic of Citizens' leading research institution, is teaming up with private groups to develop an air box used for monitoring pollution levels. By opening to public participation, air boxes were adopted and distributed across Taiwan. The data is published on the airmap.g0v.tw website, so everyone has another channel to understand air quality in Taiwan without relying solely on the Environmental Protection Administration's measuring stations.
+Based on the data infrastructure, various experiments are proposed by the government and people. Academia Sinica, our national academy, teamed up with community organizations to develop an air box used for monitoring pollution levels. By opening to public participation, air boxes were adopted and distributed across Taiwan. The data is published on the airmap.g0v.tw website, so everyone has another channel to understand air quality in Taiwan without relying solely on the Environmental Protection Administration's measuring stations.
 
-Another highlight is the "Taiwan Can Help, Health for All" program launched by the government during the pandemic. Utilizing the National Health Insurance Administration's app, anyone can choose to turn the number of masks they can purchase but did not purchase into humanitarian aid. Namely, they can donate masks to those in need around the world. The people can choose to become donors instead of waiting for the data to be released before starting to ponder how best to utilize.
+Another highlight is the "Taiwan Can Help, Health for All" program launched by the government during the pandemic. Utilizing the National Health Insurance Administration's app, anyone can choose to turn the number of masks they can purchase but did not purchase into humanitarian aid. Namely, they can dedicate masks to those in need around the world. The people can choose to become donors instead of waiting for the data to be released before starting to ponder how best to utilize.
 
-This approach of active altruism and co-creation for mutual benefit is the origin of the data altruism model the government is proposing this year. The concept is that the data of an individual or an organization can be used by others with the consent under the condition it is only of a statistical nature, completely anonymous and will not endanger the individual or organization.
+This approach of co-creation for mutual benefit is the origin of the data altruism model our government is proposing this year. The concept is that the data of an individual donor can be processed, or nonpersonal data from an organization can be used, with their consent for public good purposes, and will not endanger the individual or organization.
 
-This is also the essence of the Data Governance Act officially implemented by the European Commission in June. Data altruism emphasizes the beneficial purpose of data for scientific research and improving the public service. Individuals and data holders provide data voluntarily and free of charge for nonprofit social development. The facilitation of data-sharing benefiting the social environment takes place in an easy and simple way.
+This is also the essence of the Data Governance Act officially implemented by the European Commission in June. Data altruism emphasizes the beneficial purpose of data for scientific research and improving the public service. Individuals and nonpersonal data holders provide voluntarily free of charge for nonprofit social development. The facilitation of data-sharing benefiting the social environment takes place in an easy and simple way.
 
-Compared with the open data we tend to be more familiar with, the common characteristics of data public welfare or data altruism emphasize the freedom and openness of the initiative and participants. Personal data is no longer just a sensitive term for privacy and security, but includes the value of altruistic contributions. And of course, a digital mutual trust relationship is established accordingly.
+Compared with the "open data" model we tend to be more familiar with, the common characteristics of data altruism emphasize the initiative and participants. Beyond a sensitive term for privacy and security protection, "data" also includes the value of altruistic contributions. And of course, a digital mutual trust relationship is established accordingly.
 
 In my mind's eye, data altruism is best seen as an admission ticket. All and sundry can voluntarily and actively provide relevant data as a process of entering an "inclusive playground" that brings about real change. When everyone is a producer and a user of data, new co-creation and collaboration relationships are formed in the arrangement and analysis of nonpersonal data. In such a way, true mutual connections are made and a new type of society with digital mutual benefit is developed.
