--- a/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -25,4 +25,4 @@ This is also the essence of the Data Governance Act officially implemented by th
 
 Compared with the "open data" model we tend to be more familiar with, the common characteristics of data altruism emphasize the initiative and participants. Beyond a sensitive term for privacy and security protection, "data" also includes the value of altruistic contributions. And of course, a digital mutual trust relationship is established accordingly.
 
-In my mind's eye, data altruism is best seen as an admission ticket. All and sundry can voluntarily and actively provide relevant data as a process of entering an "inclusive safe space" that brings about real change. When everyone is a producer and a user of data, new co-creation and collaboration relationships are formed in the arrangement and analysis of nonpersonal data. In such a way, true mutual connections are made and a new type of society with digital mutual benefit is developed.
+In my mind's eye, data altruism is best seen as an admission ticket. All and sundry can voluntarily and actively provide relevant data as a process of entering an inclusive and welcoming space that brings about real change. When everyone is a producer and a user of data, new co-creation and collaboration relationships are formed in the arrangement and analysis of nonpersonal data. In such a way, true mutual connections are made and a new type of society with digital mutual benefit is developed.
