--- a/_i18n/zh-TW/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/zh-TW/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -20,10 +20,10 @@ tags:
 
 另一個經典例子是，疫情期間，臺灣政府發起「護台灣助世界」，透過全民健保行動快易通 App，任何人都可選擇將自己「可購買卻未去購買的口罩片數」做為人道援助——也就是捐出自己的口罩給世界其他地區需要的人。換言之，民眾可以主動選擇成為「捐獻者」，而不是等待資料開放出來以後，才開始思考應用方式。
 
-這種「主動利他、共創共好」的作法，成為我們今年提出的「數據公益」（Data Altruism）的濫觴。「數據公益」的基本概念是，個人自願提供資料，經過處理後成為無關個資的數據，無償允許公益使用。此外，願意無償提供數據的單位，也可以加入「數據公益」的行列。
+這種「主動利他、共創共好」的作法，成為我們今年提出「數據公益」（Data Altruism）的濫觴。「數據公益」的基本概念是，個人自願提供資料，經過處理後成為無關個資的數據，無償允許公益使用。此外，願意無償提供數據的單位，也可以加入「數據公益」的行列。
 
 這也就是歐盟執委會於今年 6 月正式開始實行的《數據治理法》（Data Governance Act，DGA）的核心內涵。歐盟強調數據之於整體環境的良善目的，個人與數據持有者自願無償提供數據用於科學研究、改善公共服務，以簡單的方式讓數據可共享，造福社會環境。
 
-比起我們過去所熟知的開放資料，「數據公益」更強調數據的公益性以及數據持有者的主動性。因此，個人數據不再只是隱私資安的敏感名詞，而包含了利他貢獻的價值，更以此建立數位互信關係。
+比起我們過去所熟知的開放資料，「數據公益」更強調數據的公益性以及數據持有者的主動性，賦予「數據」（nonpersonal data）利他貢獻的價值，更以此建立數位互信關係。
 
-我認為，大家不妨把「數據公益」想像成一張入場券，每個人可以自願、主動提供數據，形塑數位世界的「共融公園」，讓社會變得更好。當每個人都可以是數據的產製者和使用者，在數據的整理和分析中，就可以形成新的共創和協作關係，進而真正連結彼此，開展出數位共好的新型態社會。
+我認為，大家不妨把「數據公益」想像成一張入場券，每個人可以自願、主動提供數據，形塑數位世界的「共融空間」，讓社會變得更好。當每個人都可以是數據的產製者和使用者，在數據的整理和分析中，就可以形成新的共創和協作關係，進而真正連結彼此，開展出數位共好的新型態社會。
