--- a/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "A Virtuous Circle of Data Altruism"
-  excerpt: "Entering an \"inclusive playground\" that brings about real change."
+  excerpt: "Entering an inclusive and welcoming space that brings about real change."
   image: "/assets/imgs/92214070_1528843037282109_3836225141944090624_n.jpg"
   author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
