--- a/_i18n/zh-TW/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/zh-TW/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "「數據公益」的良善循環"
-excerpt: "形塑數位世界的「共融公園」，讓社會變得更好。"
+excerpt: "形塑數位世界的「共融空間」，讓社會變得更好。"
 image: "/assets/imgs/92214070_1528843037282109_3836225141944090624_n.jpg"
 author: 唐鳳、彭筱婷
 category: blog
