--- a/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
+++ b/_i18n/en/_posts/2022-08-03-「數據公益」的良善循環.md
@@ -23,6 +23,6 @@ This approach of co-creation for mutual benefit is the origin of the data altrui
 
 This is also the essence of the Data Governance Act officially implemented by the European Commission in June. Data altruism emphasizes the beneficial purpose of data for scientific research and improving the public service. Individuals and nonpersonal data holders provide voluntarily free of charge for nonprofit social development. The facilitation of data-sharing benefiting the social environment takes place in an easy and simple way.
 
-Compared with the "open data" model we tend to be more familiar with, the common characteristics of data altruism emphasize the initiative from participants. Beyond a sensitive term for privacy and security protection, "data" also includes the value of altruistic contributions. And of course, a digital mutual trust relationship is established accordingly.
+Compared with the "open data" model we tend to be more familiar with, the common characteristics of data altruism emphasize the initiative from participants, giving "nonpersonal data" a sense of altruistic purpose. And of course, a digital mutual trust relationship is established accordingly.
 
 In my mind's eye, data altruism is best seen as an admission ticket. All and sundry can voluntarily and actively provide relevant data as a process of entering an inclusive and welcoming space that brings about real change. When everyone is a producer and a user of data, new co-creation and collaboration relationships are formed in the arrangement and analysis of nonpersonal data. In such a way, true mutual connections are made and a new type of society with digital mutual benefit is developed.
