--- a/_i18n/en/_posts/2022-08-25-數位部從導入公共程式開始.md
+++ b/_i18n/en/_posts/2022-08-25-數位部從導入公共程式開始.md
@@ -1,35 +1,35 @@
 ---
   layout: "post"
-  title: "The digital part starts with the import of public programs"
-  excerpt: "As you can see from X-Road, public programs are like cross-country railways."
+  title: "Moda begins with Public Code"
+  excerpt: "As you can see from X-Road, public code are like cross-country railways."
   image: "/assets/imgs/rails-gb4c806ad8_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
- Recently, Taiwan has faced a lot of foreign interference. On August 2 alone, the websites of government agencies were attacked by hackers. In terms of distributed denial-of-service (DDoS) traffic, it was the second highest traffic volume in a single day in the past. Thirteen times. 
+Recently, Taiwan has faced a lot of foreign interference. On August 2 alone, the websites of government agencies were attacked by hackers. In terms of distributed denial-of-service (DDoS) traffic, it was 23 times higher than the previous record of traffic volume in a single day.
 
- Under such high-density pressure, it is fortunate that the information security personnel of various agencies can adjust the structure and respond quickly. This also confirms the importance of "digital resilience". 
+Under such high-density pressure, it is fortunate that the information security personnel of various agencies can adjust the structure and respond quickly. This also confirms the importance of "digital resilience". 
 
 Next, we will continue to strengthen our physical fitness. Regarding the results of the implementation of open licensing in recent years, the Ministry of Digital Development will use the "public code" as the core to further strengthen digital resilience. 
 
 Why is the key to public programs? In the past, free software, which was freely used and collaborative, started the "open source" movement and encouraged developers to publish code. 
 
- But only government agencies, due to organizational and regulatory constraints, make it difficult to import free software; the system of each unit often hinders interoperability due to different specifications. If there is a problem, it is difficult for other departments to immediately support. 
+But only government agencies, due to organizational and regulatory constraints, make it difficult to import free software; the system of each unit often hinders interoperability due to different specifications. If there is a problem, it is difficult for other departments to immediately support. 
 
 In order to completely reverse the deadlock and expand social and economic development with a digital base, the European Free Software Foundation (FSFE) has initiated the "public money, public code" movement since 2017, advocating " The system programs established by the government should be fully disclosed, with clear guidelines and specifications.”
 
 For example, to improve the digital resilience of the official website of the government, we can make good use of public programs, deploy a decentralized structure, and create a “heterogeneous” service. sex". Even if a certain part is attacked, the security and availability of the system can still be maintained through the joint defense mechanism. 
 
- The most important transnational case in recent years, X-Road, is a system jointly maintained by the governments of Estonia, Finland and Iceland. Governments of all countries can use it freely in their own countries, such as applying for subsidies, renewing driver's licenses, etc. Once problems are found, they can immediately make corrections and feed them back to the system, so that other units can update them synchronously. 
+The most important transnational case in recent years, X-Road, is a system jointly maintained by the governments of Estonia, Finland and Iceland. Governments of all countries can use it freely in their own countries, such as applying for subsidies, renewing driver's licenses, etc. Once problems are found, they can immediately make corrections and feed them back to the system, so that other units can update them synchronously. 
 
- As can be seen from X-Road, public programs are like transnational railways. Countries share the same tracks, schedules, and even carriage specifications, while railway tracks and related facilities in different countries are maintained and operated by that country. If one of the countries fixes track problems or develops new parts, it will also inform other countries to share experience and improve quality. 
+As can be seen from X-Road, public programs are like transnational railways. Countries share the same tracks, schedules, and even carriage specifications, while railway tracks and related facilities in different countries are maintained and operated by that country. If one of the countries fixes track problems or develops new parts, it will also inform other countries to share experience and improve quality. 
 
 X-Road has created a milestone in the government's digital practice, showing us that public programs are not only a protective net for information security, but also have the opportunity to create a democratic ecology of symbiosis, sharing and co-creation. 
 
-For this reason, I also proposed to join CC0 (public domain contribution, refers to free software that is not restricted by copyright), and join the international "[Public Program Standard Specification](https://standard.publiccode. net/)". In this way, as long as the materials and content authorized by CC0 are used, they have the opportunity to enter the digital infrastructure of governments at all levels. 
+For this reason, I also proposed to join CC0 (public domain contribution, refers to free software that is not restricted by copyright), and join the international [Public Code Standard](https://standard.publiccode.net/). In this way, as long as the materials and content authorized by CC0 are used, they have the opportunity to enter the digital infrastructure of governments at all levels. 
 
- In the preparatory stage, the Digital Development Department has been exploring with the service providers how to introduce the concept of public programs. In the future, our content and programs will gradually adopt CC0 authorization and release them to the public domain, so as to share the foundation of resilience with democratic partners and create a model of digital governance. 
+In the preparatory stage, the Digital Development Department has been exploring with the service providers how to introduce the concept of public programs. In the future, our content and programs will gradually adopt CC0 authorization and release them to the public domain, so as to share the foundation of resilience with democratic partners and create a model of digital governance. 
