--- a/_i18n/en/_posts/2023-01-12-一組帳號走遍網路的時代來了.md
+++ b/_i18n/en/_posts/2023-01-12-一組帳號走遍網路的時代來了.md
@@ -1,22 +1,21 @@
 ---
   layout: "post"
-  title: "The era of a group of accounts going all over the Internet has come"
-  excerpt: "Participate in the formulation of standards and synchronize with the world."
+  title: "The era of password-free login has arrived"
+  excerpt: "Participate in the formulation of standards and interoperate with the world."
   image: "/assets/imgs/blockchain-3513216_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "民主網絡"
-    - "數位產業"
-    - "資通安全"
+    - "Democracy Network"
+    - "Digital Industries"
+    - "Cyber Security"
 ---
 
-
-At the beginning of the new year, I would like to share a piece of good news with you: since January this year, the Digital Development Department has officially become a member of the international standards organization W3C (World Wide Web Association). It not only breaks through the predicament of only being able to join international organizations as a civilian, but also a milestone in the expansion of the "multiverse". 
+At the beginning of the new year, I would like to share a piece of good news with you: since January this year, the Digital Development Department has officially become a member of the international standards organization W3C (World Wide Web Consortium). It not only breaks through the predicament of only being able to join international organizations as a civilian, but also a milestone in the expansion of the Plurality. 
 
 At the same time, the Ministry of Digital Technology has also joined the FIDO Alliance, which develops and promotes safe and convenient identification standards, becoming the second Taiwan government unit member after joining the Ministry of the Interior in 2021. 
 
-Because of the W3C standards, various websites can be displayed correctly on every mobile phone, tablet, and computer. In other words, even if you have a device, without its standards, you may not be able to interpret the content of the website. We will not be able to surf the Internet to catch up on dramas, buy groceries, or conduct any activities through the website. Its importance to the world can be seen. 
+Thanks to the standards set by W3C, websites can be properly displayed on every device, be it a phone, tablet, or computer. In other words, without these standards, even if you have the device, you may not be able to read the website's content. This means no more seamless streaming, online shopping, or any activity through websites. Its importance to the world is obvious.
 
 However, if you want to further interact with other people through the website, such as making videos and publishing articles, you almost always need to register and upload information first. However, account information on a single website often cannot be shared and circulated among different platforms. This not only leads to the monopoly of a few large cross-border platforms, but also limits everyone's independent right to use data. 
 
@@ -32,4 +31,4 @@ The FIDO Alliance, established in 2013, is an international non-profit organizat
 
 Therefore, the FIDO Alliance formulated the standard of "password-free login", and developed various passports for W3C, plus security locks and keys. In this way, everyone can use their passports more safely to roam in the Internet space. 
 
-As a member of two major international organizations, the Ministry of Digital Affairs will participate in the formulation of standards according to the needs of all walks of life in Taiwan, and synchronize with the world, and immediately introduce these emerging standards into government agencies, civil society and the industry to practice" Co-existence, code-carrying interoperability" multiverse. 
+As a member of two major international organizations, the Ministry of Digital Affairs will participate in the formulation of standards according to the needs of all walks of life in Taiwan, and synchronize with the world, and immediately introduce these emerging standards into government agencies, civil society and the industry to practice Plurality -- collaborative diversity. 
