--- a/_i18n/en/_posts/2023-02-16-T-Road-與零信任.md
+++ b/_i18n/en/_posts/2023-02-16-T-Road-與零信任.md
@@ -1,34 +1,33 @@
 ---
   layout: "post"
   title: "T-Road and Zero Trust"
-  excerpt: "Triple verification of identity, equipment, and behavior patterns, even for the head of the agency."
+  excerpt: "Triple verification of identity, equipment, and behavior patterns, even the head of the agency."
   image: "/assets/imgs/security-2168233_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "數位政府"
-    - "資通安全"
+    - "Digital Service"
+    - "Cyber Security"
 ---
 
+Recently, Taiwan's first dedicated cybersecurity administrative body, the [National Institute of Cybersecurity](https://www.nics.nat.gov.tw/?lang=en) (NICS), was officially established, adding a strong force to the Ministry of Digital Affairs. About the same time, the Ministry of the Interior also revised the [Regulation for Applying for Provision of Household Registration Information and Related Information by Various Agencies.](https://www.moi.gov.tw/news_content.aspx?n=145&s=274867)". 
 
-A few days ago, my country's first administrative legal person responsible for information security, the National Institute of Information Security ([Information Security Institute](https://www.nics.nat.gov.tw/)) was formally established to serve the digital department has added a tough new force. coincidentally, the ministry of the interior has also revised the "[regulations on the application of various agencies to provide household registration information and relative information](https://www.moi.gov.tw/news_content.aspx?n=145&s=274867)". 
+These two events seem unrelated, but in fact, they mark a new chapter in the concept of "cybersecurity equals national security."
 
- These two incidents seem to be unrelated, but in fact they open a new page for "Information Security is National Security". 
+Given that data exchange methods such as CDs and flash drives are easily replicated, lost, or untraceable, the Ministry of the Interior stopped providing household registration data to applying units through these methods since the end of last year. This means that any agency applying to access household registration data can only do so through the government's Internet Service Network (GSN).
 
-In view of the fact that data exchange methods such as CDs and flash drives are prone to illegal copying, loss or theft, and cannot be tracked, the Ministry of the Interior has stopped providing household registration information to applicants through these methods since the end of last year. In other words, any agency's application for access to household registration information can only be done through the Government Internet Service Network (GSN). 
+Based on the experience of the Ministry of the Interior, all public agencies that involve national personal information will introduce the "Interagency Data Transmission Exclusive Channel" (T-Road) within the next two years. T-Road transmission is encrypted with agency certificates and is not connected to external service, providing more stringent cybersecurity.
 
-Referring to the experience of the Ministry of the Interior, all public agencies involved in personal information across the country will introduce the "Exclusive Channel for Inter-Agency Data Transmission (T-Road)" this year and next. The whole process of T-Road transmission is encrypted with agency certificates, and it is not connected to external service network segments, providing a more stringent guarantee for information security. 
+Based on this foundation, our next focus policy is to integrate the "Zero Trust" system with the T-Road network transmission management system and fully introduce it into public agencies with the highest level of cybersecurity.
 
-Based on this, our next key policy is to fully introduce the "zero trust" system, combined with the T-Road network transmission management system, into public agencies with the highest level of information security. 
+The traditional cybersecurity framework is based on the distinction between internal and external network permissions, protected by a firewall. The most common approach is that administrators must enter the internal network and input an account password to log into the back end.
 
-The basis of the traditional information security architecture is to distinguish between internal and external network permissions, and use a firewall to protect the internal network. The most common method is that the administrator must enter the intranet and enter the account password to log in to the background. 
+However, relying only on the firewall and password for protection is like relying on a single anti-theft door and password lock for an entire building. No matter how stringent the security measures are, if someone intends to steal, they can use the password and pass the security to enter each floor and move freely in each room, causing serious consequences.
 
-However, entrusting protection only to firewalls and account secrets is like relying on only one anti-theft door and combination lock for the entire building. No matter how heavily guarded it is, as long as a person with a heart steals the password and passes through the access control, he can enter each floor and move freely in each room, causing serious consequences. 
+The core concept of "Zero Trust" is "Never Trust, Continuously Verify": anyone, anywhere, at any time, must undergo three verifications of identity, equipment, and behavior patterns when entering any room, even the head of the agency. This way, even if the attacker sneaks into the lobby, they cannot obtain other data because the three verifications at each door are not the same.
 
-The core concept of "zero trust" is "never trust, continuous verification": no matter when and where anyone enters any room, they must conduct triple verification of identity, equipment, and behavior patterns, even the head of the agency No exception. In this way, even if the attacker breaks into the hall by chance, other information cannot be obtained, because the three-factor authentication is different for each door. 
+From these characteristics, it can be seen that for information systems that require a large amount of transmission and frequent interaction with other units, Zero Trust can prevent malicious actors from stealing data at both ends of the transmission. The complete identity verification trail and undeniable transmission record can more effectively detect insider theft.
 
-From these characteristics, it can be seen that for information systems that require a large amount of transmission and frequent exchanges with other units, zero trust can prevent interested people from stealing data at the sending and receiving ends. Complete identity verification traces and undeniable transmission records can more effectively detect abnormal behaviors of guarding and stealing. 
+T-Road provides a leak-proof secure channel, and "Zero Trust" fills in the gap of a stringent gatekeeping mechanism. Therefore, starting from the Ministry of Digital Affairs' MyData platform, the T-Road management system will fully introduce the Zero Trust system with three verifications by the end of this year. The Cybersecurity Institute, which broadens the recruitment of cybersecurity professionals and effectively integrates industrial, academic, and research resources, is the project partner to assist various agencies in introducing Zero Trust systems.
 
-T-Road provides a watertight security channel, and "Zero Trust" complements a strict gatekeeping mechanism. Therefore, starting from the MyData platform of the digital department, before the end of this year, the T-Road management system will fully introduce a triple-authentication zero-trust system. The Information Security Institute, which recruits information security professionals and effectively integrates industry-university-research resources, is a system engineering partner that assists various agencies in introducing zero trust. 
-
-In addition to assisting various agencies to strengthen information security measures, the Information Security Institute will also use public codes (Public Code) to develop a common system and assist various ministries in joint defense against major information security incidents, from "never trust, continue to verify" Starting from the zero trust architecture of the company, we will create a digital resilience of the whole people that "never stop, continue to improve". 
+In addition to assisting various agencies to strengthen cybersecurity measures, the NICS will also use public code to develop common systems and assist various departments in joint defense against major cybersecurity incidents. Starting from the "Never Trust, Continuously Verify" Zero Trust framework, we aim to create a "Never Stop, Continuously Improve" national digital resilience.
