--- a/_i18n/en/_posts/2023-05-02-資料治理有智-數據公益有理.md
+++ b/_i18n/en/_posts/2023-05-02-資料治理有智-數據公益有理.md
@@ -1,37 +1,36 @@
 ---
   layout: "post"
-  title: "Data governance is wise, data public welfare is reasonable"
-  excerpt: "The mechanism of \"free flow and trustworthy data\" is the top priority of cross-border cooperation."
+  title: "Informed Data Governance, Rational Data Altruism"
+  excerpt: "\"Data Free Flow with Trust\" is the top priority for cross-border collaboration."
   image: "/assets/imgs/binary-ga626d4a1f_1280.jpg"
-  author: "唐鳳"
+  author: "Audrey Tagn"
   category: "blog"
   tags: 
-    - "多元創新"
+    - "Plural Innovation"
 ---
 
+This book is the crystallization of wisdom jointly created by the digital governance academics and practitioners, following the publication of "Government Digital Transformation: An Essential Guide". This time, the authors focus on "government data governance", once again demonstrating their profound professional expertise.
 
-This book is the crystallization of wisdom jointly created by digital governance academic circles and practical circles after "Government Digital Transformation: A Must-Read Introductory Book". This time the group of authors focused on "Government Data Governance" and once again demonstrated their profound professionalism. 
+If digital transformation is likened to the Industrial Revolution, data is the new energy driving the wheels of the times. Just as the development and utilization of energy are vital to the success of industries, data governance is the cornerstone of digital transformation. 
 
-If digital transformation is compared to the industrial revolution, data is the new energy that turns the wheel of the times; just as the development and application of energy is critical to the success or failure of industrial development, data management can be regarded as the key cornerstone of digital transformation. 
+Today, with the popularization of audiovisual and language models, businesses ranging from translation, customer service, marketing, and content creation are all impacted by generative technologies. Just like advancement of refining technology has liberated fossil fuels from primitive uses such as lighting and heating — not only producing powerful propulsion for land, sea, and air vehicles but also generating countless plastic products, permeating every aspect of food, clothing, housing, transportation, education, and entertainment — the prevalence of foundation models spurs global investment in data applications, unleashing boundless creativity.
 
-Today, with the popularization of audio-visual and language models, translation, customer service, marketing, creation and other industries are all impacted by generative technology. Just like the leap in refining technology, fossil fuels have been freed from their original uses such as lighting and heating. Not only has the powerful power of land, sea and air vehicles been refined, but also countless plasticized products have entered all aspects of life in food, clothing, housing, transportation, and entertainment; the foundation model (foundation The prevalence of models) has prompted a global rush to invest in the application and development of data, swaying endless creativity. 
+However, just as petrochemical products have triggered climate crises and ecological disasters, leading to the pursuit of clean energy as a century-long challenge, foundation models are closely related to large datasets from training to application. If there is no foundation for proper governance, a cyber-ecological disaster is imminent, with deepfake scams being just the tip of the iceberg.
 
-However, just as petrochemical products have caused the climate crisis and ecological catastrophe, so that the pursuit of clean energy has become the challenge of the century; the basic model is closely related to huge amounts of data from training to application. If there is no good governance foundation, digital ecological catastrophe can be said is imminent, and the interactive deepfakes ahead of us are just the tip of the iceberg. 
+Fortunately, the international community is paying close attention to governance issues, expecting legal, ethical, and technological advancements to proceed hand in hand. At the G7 Digital and Technology Ministers' Meeting held in Japan in late April, a joint statement was issued, pledging to promote "human-centric" principles to maximize benefits for all and oppose misuse and abuse that undermines democracy, freedom, and human rights. The statement echoes the spirit of the "Declaration of the Summit for Democracy" and the "Declaration for the Future of Internet", pointing out that a "Data Free Flow with Trust (DFFT)" mechanism is the top priority for cross-border collaboration.
 
-Fortunately, the international community is paying close attention to governance issues, expecting legal ethics and technology to go hand in hand. At the end of April this year, the G7 Digital Technology Ministerial Meeting held in Japan issued a joint statement, declaring that it will promote the "people-oriented" public welfare value and oppose improper applications that threaten democracy, freedom, and human rights. The statement echoes the spirit of the "Democratic Summit Declaration" and "Future Internet Declaration", pointing out that the construction of a "Data Free Flow with Trust (DFFT)" (Data Free Flow with Trust, DFFT) mechanism is the top priority for cross-border collaboration. 
+In other words, in the face of rapidly developing technologies such as foundation models, even if there are concerns about harms to human rights and democratic values, "free flow" remains the primary value of cross-border data governance, rather than building isolated strongholds or resorting to government regulation to reject data flow, turning advanced countries into "prohibition-first" countries.
 
-In other words, in the face of fast-growing technologies such as basic models, even if there are doubts about the infringement of human rights and democracy, "free circulation" is still the primary value of cross-border data governance, rather than building deep trenches and high fortresses Isolated islands, let alone return to the ancestral land, through government supervision, ignorantly reject data circulation, turning advanced countries into "pre-ban" countries. 
+The five principles put forward in the statement — "rule of law", "due process", "democracy", "respect for human rights" and "harnessing the opportunities of innovation" — can be summed up as "human centric", firmly defending the value and protection of individuals as data subjects. Just like the well-known fable, if governments cannot sincerely face the lost iron axe, they will not be rewarded with golden and silver axes.
 
-The five principles put forward in the statement are "use of innovative opportunities", "rule of law", "due process", "democracy", and "respect for human rights". For the value and protection of the data subject. Like the well-known fable, if the governments of various countries cannot sincerely face the abandoned iron axe, they will not be rewarded with gold and silver axes. 
+The Ministry of Digital Affairs was established in response to public expectations, with the mission of "government digital services, data governance, and open data". As a supplement to legal and ethical norms, we promote Privacy Enhancing Technologies (PETs) and actively assist e-commerce and logistics companies in adopting them to reduce the risk of personal data breaches.
 
-Digital Department was established under the expectation of all walks of life, shouldering the mission of "Government Digital Services, Data Governance and Openness". As an assistant to the legal system and ethical norms, we promote privacy-enhancing technologies (PETs) and actively guide e-commerce and logistics companies to introduce them, precisely to reduce the risk of personal data leakage. 
+Observing international trends, the European Union recently advocated privacy-enhancing processing, proactively transforming high-value data into non-personal data, promoting applications across various sectors for public benefit.
 
-Observing international trends, the European Union has recently advocated privacy-enhancing processing, and actively converts high-value application data into data that does not involve personal information (ie, "data", non-personal data), so as to promote applications from all walks of life, create public interest. 
+In Taiwan, public-benefit applications such as climate and environment, disaster prevention and rescue, transportation, health care, energy management, and social assistance all have corresponding "high-value" topics on the data.gov.tw platform, inspiring endless innovative solutions. Over the past decade, the platform has attracted 113 million views and over 19 million downloads, and through events like the "Presidential Hackathon", it inspired a myriad of practical co-creations.
 
-As far as our country is concerned, all public welfare applications such as climate environment, disaster prevention and rescue, transportation, health care, energy management, and social assistance have corresponding "high application value" themes on the data.gov.tw platform , Inspiring a steady stream of innovative solutions. In the past ten years, the platform has attracted 113 million views and more than 19 million downloads. Through activities such as the "President's Cup Hackathon", it has become a practice of co-creation by the whole people. 
+In other words, the "oil analogy" mentioned in this book may only be half right; oil and minerals are rival goods, but data is quite the opposite, possessing "non-exclusivity" and "non-competitiveness". Under a governance environment built on sound legal systems and privacy-enhancing technologies, data can exhibit "anti-rival good" characteristics: the more it is shared, the greater its value, contributing to both individuals and the world.
 
-In other words, the "oil theory" quoted in this book is probably only half correct; oil and minerals are competitive goods, but data is just the opposite, with "non-excludability" and "non-competition". Under the governance environment created by technology, the characteristics of "anti-rival good" (anti-rival good) can be brought into play: the more you share, the higher the value, which contributes to both individuals and the world. 
+That is to say, only in an environment of free flow with trust can the "data altruism" concept proposed by the European Union's Data Governance Act (DGA) be realized: data holders voluntarily provide data to drive societal development and improve public service quality.
 
-That is to say, only in a trusted environment of free circulation can the concept of "data altruism" proposed by the EU's Data Governance Act (DGA) be implemented: The holders of all parties voluntarily provide data to drive social development and improve the quality of public services. 
-
-With the popularization of the basic model, the vision of "Data Democratization" in Chapter 10 of this book is about to be realized. Everyone is expected to become a producer and user, and "Data Governance" has also become the core issue of digital development. I believe that the publication of this book will definitely lead all walks of life to make data governance wise and reasonable—only by gathering the wisdom of all can we connect with each other, promote a good co-creation and collaboration relationship, accomplish everyone's business, and realize rational and restrained "data public welfare" ". It is for sequence. 
+As foundation models become popular, the vision of "data democratization" in Chapter 10 of this book is about to be realized, with everyone expected to become a producer and user, and "data governance" becoming a core issue in digital development. The publication of this book will undoubtedly guide all sectors to achieve informed and rational data governance. Only by pooling the collective intelligence can we establish mutual connections, foster virtuous collaborations toward the common good, and realize rational "data altruism" in an orderly fashion. It is my pleasure to write this foreword.
