--- a/_i18n/en/_posts/2023-05-11-數位公共建設，全民共享.md
+++ b/_i18n/en/_posts/2023-05-11-數位公共建設，全民共享.md
@@ -1,18 +1,18 @@
 ---
   layout: "post"
-  title: "Digital public construction, shared by all"
+  title: "Digital public infrastructure, shared by all"
   excerpt: "How to properly use this mechanism that combines identity verification, information flow, and cash flow in the future?"
   image: "/assets/imgs/technology-5348129_1280.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "數位政府"
+    - "Digital Service"
 ---
 
 
 Alain Richard, Vice President of the French Senate, led the Senate Friendship Group to Taiwan to visit the Digital Department at the end of April. Members of the French political parties are most curious about how to design a system to smoothly promote digital services? I said that this is the result of long-term accumulation of inter-ministerial committees. The current "universal cash for all people" is the best example. 
 
-Public cash policy is based on triple coupons and five times coupons. Take the collection channel as an example. After the digital voucher is used up, you can choose to receive cash. At that time, only some banks' automatic teller machines (ATM) supported it. This time we have promoted more banks to join, covering more than 80% of the country, serving more than 4 million people, and receiving 6,000 yuan directly at ATMs. 
+Public cash policy is based on triple- and quintuple-stimulus vouchers. Take the collection channel as an example. After the digital voucher is used up, you can choose to receive cash. At that time, only some banks' automatic teller machines (ATM) supported it. This time we have promoted more banks to join, covering more than 80% of the country, serving more than 4 million people, and receiving 6,000 yuan directly at ATMs. 
 
 For friends who are inconvenient to collect in person, you can also register online on the official website, and let the cash be directly transferred to your account. The "children's family epidemic prevention subsidy" system established in 2021 can not only ensure the guardianship relationship between the child and the recipient, but also allow the recipient to decide which account to remit to. Become the core structure of this popularization of gold. 
 
@@ -26,4 +26,4 @@ The smooth general distribution has come to an end, how to properly use this mec
 
 In addition, we will also import "T-Road cross-organization data transmission exclusive channel", the whole process is encrypted with agency certificates, and will not be connected to external service network segments. Normally, the transmission interface is closed through T-Road, and the T-Road interface transmission can only be activated after the distribution operation is started and the competent authority and the personal information agency confirm the scope of access. In this way, agencies at all levels can ensure the security of personal information when performing distribution operations in the future. 
 
-A few days ago, the number of general cash recipients has exceeded 20 million, of which more than 9 million people have received online through the official website. The Digital Department will continue to collaborate with various ministries to create more labor-saving and safe public programs, so that the public can obtain convenient services in multiple ways. 
+A few days ago, the number of general cash recipients has exceeded 20 million, of which more than 9 million people have received online through the official website. The Ministry of Digital Affairs will continue to collaborate with various ministries to create more labor-saving and safe public programs, so that the public can obtain convenient services in multiple ways.
