--- a/_i18n/en/_posts/2023-05-11-數位公共建設，全民共享.md
+++ b/_i18n/en/_posts/2023-05-11-數位公共建設，全民共享.md
@@ -3,7 +3,7 @@
   title: "Digital public infrastructure, shared by all"
   excerpt: "How to properly use this mechanism that combines identity verification, information flow, and cash flow in the future?"
   image: "/assets/imgs/technology-5348129_1280.jpg"
-  author: "Audrey Tang"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
     - "Digital Service"
