--- a/_posts/2023-05-11-數位公共建設，全民共享.md
+++ b/_posts/2023-05-11-數位公共建設，全民共享.md
@@ -3,7 +3,7 @@ layout: post
 title: 數位公共建設，全民共享
 excerpt: 未來要如何妥善運用這個結合身分驗證、資訊流及金流的機制呢？
 image: /assets/imgs/technology-5348129_1280.jpg 
-author: 唐鳳
+author: 唐鳳、彭筱婷
 category: blog
 tags:
   - 數位政府
