--- a/_i18n/zh-TW/_posts/2023-06-08-一通標高三千公尺的電話.md
+++ b/_i18n/zh-TW/_posts/2023-06-08-一通標高三千公尺的電話.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: 一通標高三千公尺的電話
-excerpt: ...
+excerpt: "5G 遠距診療平台即時傳輸醫學影像，讓遠端的專科醫師判讀。"
 image: /assets/imgs/nature-g62a81da2f_1280.jpg 
 author: 唐鳳、彭筱婷
 category: blog
 tags:
   - 韌性建設
   - 資源管理
-  - 產業發展
+  - 數位產業
 ---
 
 在瞬息萬變的網路世界，「秒讀」、「秒回」是很多人習以為常的行為模式。不過，數位部的同仁，必須定期撥打直到最後一秒才能掛斷的「一分鐘電話」。
